Lint, plus bug fixes. All the way to server up on https.